k8s/innfactory-demo-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: innfactory-demo
  labels:
    name: innfactory-demo
    istio-injection: enabled
