k8s/service1.yaml
#deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: service1
    version: "0.1"
  name: service1
  namespace: innfactory-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
      version: "0.1"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service1
        version: "0.1"
        actorSystemName: service1
      namespace: innfactory-demo
      annotations:
        traffic.sidecar.istio.io/includeInboundPorts: "8081"
        traffic.sidecar.istio.io/excludeOutboundPorts: "2552,8558"
    spec:
      containers:
        - name: service1
          image: innfactory-test/service1:0.1
          #health
          livenessProbe:
            httpGet:
              path: /alive
              port: 8558
          readinessProbe:
            httpGet:
              path: /ready
              port: 8558
          #health
          ports:
            # akka remoting
            - name: "tcp-remoting"
              containerPort: 2552
              protocol: TCP
            # grpc
            - name: "grpc-grpc"
              containerPort: 8081
              protocol: TCP
            # akka-management bootstrap
            - name: "tcp-boostrap"
              containerPort: 8558
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service1
    version: "0.1"
  name: service1
  namespace: innfactory-demo
spec:
  ports:
    - name: "grpc-grpc"
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: service1
    version: "0.1"
  type: ClusterIP
