k8s/service2.yaml
#deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: service2
    version: "0.1"
  name: service2
  namespace: innfactory-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
      version: "0.1"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service2
        version: "0.1"
        actorSystemName: service2
      namespace: innfactory-demo
      annotations:
        traffic.sidecar.istio.io/includeInboundPorts: "8090"
        traffic.sidecar.istio.io/excludeOutboundPorts: "2552,8558"
    spec:
      containers:
        - name: service2
          image: innfactory-test/service2:0.1
          #health
          livenessProbe:
            httpGet:
              path: /alive
              port: 8558
          readinessProbe:
            httpGet:
              path: /ready
              port: 8558
          #health
          ports:
            # akka remoting
            - name: "tcp-remoting"
              containerPort: 2552
              protocol: TCP
            # akka-management bootstrap
            - name: "tcp-boostrap"
              containerPort: 8558
              protocol: TCP
            # http api
            - name: "http-api"
              containerPort: 8090
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service2
    version: "0.1"
  name: service2
  namespace: innfactory-demo
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8090
  selector:
    app: service2
    version: "0.1"
