k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: akka-gateway
  namespace: "innfactory-demo"
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8090
        name: http
        protocol: HTTP
      hosts:
        - "service2.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: akka
  namespace: "innfactory-demo"
spec:
  hosts:
    - "service2.example.com"
  gateways:
    - akka-gateway
  http:
    - match:
        - uri:
            prefix: /greet
      route:
        - destination:
            host: service2
            port:
              number: 8000
